--- a/anonymous.html
+++ b/anonymous.html
@@ -6,6 +6,7 @@
 	<title>Luis Londono</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/anonymous.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="shortcut icon" type="image/x-icon" href="images/cornellicon.ico">
 	<script type="text/javascript" src="./js/anonymous.js"></script>
 
@@ -56,12 +57,31 @@
 		<div class="message-board">
 			<div id="message-board-posts">
 
-				<!--
-					<div class = "message-board-post">question
-					<div class="message-board-post-question">Question?</div>
-					<div class="message-board-post-answer">My answer</div>
-				</div>
-			 -->
+
+				<!-- <div class="message-board-post">
+					<div class="message-board-post-rating-container">
+						<div class="message-board-post-rating">
+							<button class="message-board-post-rating-button-upvote">
+								<i class="material-icons" style="font-size:24px;">thumb_up</i>
+							</button>
+							<div class="message-board-post-rating-score">0</div>
+							<button class="message-board-post-rating-button-downvote">
+								<i class="material-icons" style="font-size:24px;">thumb_down</i>
+							</button>
+						</div>
+					</div>
+
+					<div class="message-board-post-content">
+						<div class="message-board-post-question"> Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Possimus ex quasi quam nemo culpa molestiae omnis eum perspiciatis ut eveniet ad,
+							blanditiis velit earum </div>
+						<div class="message-board-post-answer">My answer; Lorem ipsum dolor sit amet consectetur
+							adipisicing elit. Cumque perferendis eveniet numquam autem illo aperiam necessitatibus,
+							natus hic optio quaerat, unde earum. Repellendus adipisci ea odit exercitationem quis nulla
+							tempora!</div>
+					</div>
+				</div> -->
+
 
 				<!-- <div>
 					<h3> No posts have been made :( </h3>
