--- a/anonymous.html
+++ b/anonymous.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" id="root">
 
 <head>
 	<meta charset="utf-8">
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="shortcut icon" type="image/x-icon" href="images/cornellicon.ico">
 	<script type="text/javascript" src="./js/anonymous.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
 </head>
 
@@ -53,21 +54,28 @@
 
 	<div class="page-content">
 
-		<h1>Send me an Anonymous Message!</h1>
+		<h1>👨🏻‍💻 ask me anything 👩🏼‍💻</h1>
 		<div class="message-board">
 			<div id="message-board-posts">
+
+
+
 			</div>
 
 			<div id="message-board-post-submittor">
-				<textarea name="" id="submittor-question-field" cols="30" rows="5"></textarea>
-				<button id="message-board-post-submittor-button" onclick="handleSubmit()">Submit</button>
+				<textarea name="" id="submittor-question-field" cols="30" rows="5"
+					placeholder="let out your hate here 😤"></textarea>
+				<button id="message-board-post-submittor-button" onclick="handleSubmit()">Submit<i
+						class="material-icons right">send</i>
+				</button>
+
 			</div>
 
-			<div>
+			<!-- <div>
 				<button id="nuclear-button" onclick="DeleteAllPosts()">
 					Nuclear Option
 				</button>
-			</div>
+			</div> -->
 		</div>
 
 
