changed up homepage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 			<nav>
 				<ul>
 					<li class="nav-link"><a href="https://luislondono.com/">Home</a></li>
-					<li class="nav-link"><a href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">Resume</a></li>
+					<li class="nav-link"><a
+							href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">Resume</a>
+					</li>
 					<li class="nav-link"><a href="myWork">My Work</a></li>
 					<li class="nav-link" id="dropdown-content">Gallery
 						<!-- <div class="nav-bar-collapsable-column">
@@ -31,12 +33,12 @@
 							</div> -->
 					</li>
 
-					<li class="social-media-link"><a href="https://www.github.com/LuisLondono"> <img src="images/githubLogo.svg"
-							 alt=""></a></li>
+					<li class="social-media-link"><a href="https://www.github.com/LuisLondono"> <img
+								src="images/githubLogo.svg" alt=""></a></li>
 					<li class="social-media-link"><a href="https://www.facebook.com/luislondonoramos"><img
-							 src="images/facebookLogo.svg" alt=""></a></li>
+								src="images/facebookLogo.svg" alt=""></a></li>
 					<li class="social-media-link"><a href="https://www.linkedin.com/in/luislondonoramos"><img
-							 src="images/linkedinLogo.svg" alt=""></a></li>
+								src="images/linkedinLogo.svg" alt=""></a></li>
 
 				</ul>
 
@@ -63,21 +65,22 @@
 			</div>
 
 			<div class="aboutme-container">
-				<h3> Welcome to my website!</h3>
+				<h3> Welcome!</h3>
 				<hr>
-				<p> My name is Luis and I'm a sophomore computer science student at Cornell
-					University with minors in Operations Research and Business. </p>
+				<p> My name is Luis and I'm a rising junior at Cornell University studying computer science. I am also
+					persuing a minor in Operations Research and Business. </p>
 
-				<p> Aside from coursework I am also active on campus in a variety of facets:
+				<p> Aside from coursework I also stay active on campus in a variety of ways:
 				</p>
 				<ul>
-					<li> I am secretary of the Society of Hispanic Professional Engineers (SHPE)</li>
+					<li> I am secretary and Executive Boardmember of the Society of Hispanic Professional Engineers
+						(SHPE)</li>
 					<li>I participate in Intramural Volleyball and biking club</li>
 					<li> I am a web developer for Cornell Hyperloop</li>
 				</ul>
 
-				<p>I am interested in mobile & frontend app development and data analytics and I am
-					currently looking for summer internships to explore these interests.</p>
+				<p>Currently, I am working at Uber as a Software Engineering Intern under the Customer Obsession team. I
+					hope to have many great updates on my experience as the summer continues!</p>
 
 				<hr>
 
