--- a/anonymous.html
+++ b/anonymous.html
@@ -65,8 +65,7 @@
 			<div id="message-board-post-submittor">
 				<textarea name="" id="submittor-question-field" cols="30" rows="5"
 					placeholder="let out your hate here 😤"></textarea>
-				<button id="message-board-post-submittor-button" onclick="handleSubmit()">Submit<i
-						class="material-icons right">send</i>
+				<button id="message-board-post-submittor-button">Submit<i class="material-icons right">send</i>
 				</button>
 
 			</div>
@@ -100,17 +99,17 @@
 
 <script>
 	// Your web app's Firebase configuration
-	var firebaseConfig = {
-		apiKey: "AIzaSyCSFoOcUMAULAn6ScMSgygfS_fZcnVTpSk",
-		authDomain: "luislondono-com.firebaseapp.com",
-		databaseURL: "https://luislondono-com.firebaseio.com",
-		projectId: "luislondono-com",
-		storageBucket: "luislondono-com.appspot.com",
-		messagingSenderId: "851373763529",
-		appId: "1:851373763529:web:c171fe15b7d82883"
-	};
-	// Initialize Firebase
-	firebase.initializeApp(firebaseConfig);
+	// var firebaseConfig = {
+	// 	apiKey: "AIzaSyCSFoOcUMAULAn6ScMSgygfS_fZcnVTpSk",
+	// 	authDomain: "luislondono-com.firebaseapp.com",
+	// 	databaseURL: "https://luislondono-com.firebaseio.com",
+	// 	projectId: "luislondono-com",
+	// 	storageBucket: "luislondono-com.appspot.com",
+	// 	messagingSenderId: "851373763529",
+	// 	appId: "1:851373763529:web:c171fe15b7d82883"
+	// };
+	// // Initialize Firebase
+	// firebase.initializeApp(firebaseConfig);
 //   var db = firebase.firestore();
 </script>
 
