--- a/anonymous.html
+++ b/anonymous.html
@@ -54,10 +54,9 @@
 
 	<div class="page-content">
 
-		<h1>👨🏻‍💻 ask me anything 👩🏼‍💻</h1>
+		<h1 id = "page-title">👨🏻‍💻 ask me anything 👩🏼‍💻</h1>
 		<div class="message-board">
 			<div id="message-board-posts">
-
 
 
 			</div>
