fixed async calls

--- a/anonymous.html
+++ b/anonymous.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/anonymous.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="shortcut icon" type="image/x-icon" href="images/cornellicon.ico">
-	<script type="text/javascript" src="./js/anonymous.js"></script>
+	<script type="text/javascript" src="./js/vanAnon.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
 </head>
@@ -53,8 +53,8 @@
 	</header>
 
 	<div class="page-content">
-
-		<h1 id = "page-title">👨🏻‍💻 ask me anything 👩🏼‍💻</h1>
+		<h1 id = "page-title">👨🏻‍💻 👩🏼‍💻</h1>
+		<!-- <h1 id = "page-title">👨🏻‍💻 ask me anything 👩🏼‍💻</h1> -->
 		<div class="message-board">
 			<div id="message-board-posts">
 
