--- a/index.html
+++ b/index.html
@@ -14,36 +14,44 @@
 
     <header>
         <div class="navbar-container">
-            <div id="navbar-logo-desktop">
-                <a href="https://luislondono.com/">Luis Hernando Londono</a>
-            </div>
 
 
-            <!-- <nav id="nav-links-desktop">
+
+            <nav id="nav-links-desktop">
+                <div id="navbar-logo-desktop">
+                    <a href="https://luislondono.com/">Luis Hernando Londono</a>
+                </div>
                 <ul>
                     <li class="nav-link"><a href="https://luislondono.com/">Home</a></li>
-                    <li class="nav-link"><a href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">Resume</a>
+                    <li class="nav-link"><a
+                            href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">Resume</a>
                     </li>
                     <li class="nav-link"><a href="myWork">My Work</a></li>
-                    <li class="nav-link" id="dropdown-content">Gallery
+                    <li class="nav-link" id="dropdown-content">Gallery</li>
+
+                    <li class="social-media-link" id="github-link">
+                        <a href="https://www.github.com/LuisLondono"></a>
+                    </li>
+                    <li class="social-media-link" id="facebook-link">
+                        <a href="https://www.facebook.com/luislondonoramos"></a>
+                    </li>
+                    <li class="social-media-link" id="linkedin-link">
+                        <a href="https://www.linkedin.com/in/luislondonoramos"></a>
                     </li>
 
-                    <li class="social-media-link">
-                        <a href="https://www.github.com/LuisLondono"> <img src="images/icons/githubLogo.svg" alt=""></a>
-                    </li>
-                    <li class="social-media-link">
-                        <a href="https://www.facebook.com/luislondonoramos"><img src="images/icons/facebookLogo.svg" alt=""></a>
-                    </li>
-                    <li class="social-media-link">
-                        <a href="https://www.linkedin.com/in/luislondonoramos"><img src="images/icons/linkedinLogo.svg" alt=""></a>
-                    </li>
 
                 </ul>
 
-            </nav> -->
+            </nav>
 
             <nav id="nav-links-mobile">
-                <ul>
+                <div id="mobile-collapsed-menu-container">
+                    <div class="hamburger-bun" id="bun-1"></div>
+                    <div class="hamburger-bun" id="bun-2"></div>
+                    <div class="hamburger-bun" id="bun-3"></div>
+                </div>
+
+                <!-- <ul>
                     <li class="nav-link">
                         <a href="https://luislondono.com/">
                             <img src="./images/icons/home.svg" alt="home">
@@ -66,7 +74,7 @@
                         </a>
                     </li>
 
-                </ul>
+                </ul> -->
 
             </nav>
 
@@ -125,15 +133,14 @@
     </div>
     <div id="page-footer-navigator">
         <ul>
-            <li class="social-media-link">
-                <a href="https://www.github.com/LuisLondono"> <img src="images/icons/githubLogo.png" alt=""></a>
+            <li class="social-media-link" id="github-link">
+                <a href="https://www.github.com/LuisLondono"></a>
             </li>
-            <li class="social-media-link">
-                <a href="https://www.facebook.com/luislondonoramos"><img src="images/icons/facebookLogo.svg" alt=""></a>
+            <li class="social-media-link" id="facebook-link">
+                <a href="https://www.facebook.com/luislondonoramos"></a>
             </li>
-            <li class="social-media-link">
-                <a href="https://www.linkedin.com/in/luislondonoramos"><img src="images/icons/linkedinLogo.svg"
-                        alt=""></a>
+            <li class="social-media-link" id="linkedin-link">
+                <a href="https://www.linkedin.com/in/luislondonoramos"></a>
             </li>
         </ul>
     </div>
