more responsive stuff

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 
 
-            <nav id="nav-links-desktop">
-                <div id="navbar-logo-desktop">
+            <nav id="nav-bar-desktop">
+                <div id="navbar-logo">
                     <a href="https://luislondono.com/">Luis Hernando Londono</a>
                 </div>
                 <ul>
@@ -44,37 +44,48 @@
 
             </nav>
 
-            <nav id="nav-links-mobile">
-                <div id="mobile-collapsed-menu-container">
-                    <div class="hamburger-bun" id="bun-1"></div>
-                    <div class="hamburger-bun" id="bun-2"></div>
-                    <div class="hamburger-bun" id="bun-3"></div>
+            <nav id="nav-bar-mobile">
+                <div id="nav-bar-mobile-horizontal-menu">
+                    <div id="mobile-menu-icon-container">
+                        <div class="hamburger-bun" id="bun-1-collapsed"></div>
+                        <div class="hamburger-bun" id="bun-2-collapsed"></div>
+                        <div class="hamburger-bun" id="bun-3-collapsed"></div>
+                    </div>
+                    <div id="navbar-logo">
+                        <a href="https://luislondono.com/">Luis Hernando Londono</a>
+                    </div>
+                </div>
+                <div class="mobile-menu-container" id="mobile-menu-container-collapsed">
+                    <ul>
+                        <li class="nav-link">
+                            <a href="https://luislondono.com/">
+                                <!-- <img src="./images/icons/home.svg" alt="home"> -->
+                                Home
+                            </a>
+                        </li>
+                        <li class="nav-link">
+                            <a
+                                href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">
+                                Resume
+                                <!-- <img src="./images/icons/resume.svg" alt="resume"> -->
+                            </a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="myWork">
+                                My Work
+                                <!-- <img src="./images/icons/work.svg" alt="work"> -->
+                            </a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="myWork">
+                                Gallery
+                                <!-- <img src="./images/icons/gallery.svg" alt="home"> -->
+                            </a>
+                        </li>
+
+                    </ul>
                 </div>
 
-                <!-- <ul>
-                    <li class="nav-link">
-                        <a href="https://luislondono.com/">
-                            <img src="./images/icons/home.svg" alt="home">
-                        </a>
-                    </li>
-                    <li class="nav-link">
-                        <a
-                            href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">
-                            <img src="./images/icons/resume.svg" alt="resume">
-                        </a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="myWork">
-                            <img src="./images/icons/work.svg" alt="work">
-                        </a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="myWork">
-                            <img src="./images/icons/gallery.svg" alt="home">
-                        </a>
-                    </li>
-
-                </ul> -->
 
             </nav>
 
