--- a/myWork.html
+++ b/myWork.html
@@ -16,34 +16,78 @@
 <body class="page">
 	<header>
 		<div class="navbar-container">
-			<div class="navbar-logo">
-				<a href="https://luislondono.com/">Luis Hernando Londono</a>
-			</div>
 
 
-			<nav>
+
+			<nav id="nav-bar-desktop">
+				<div id="navbar-logo">
+					<a href="https://luislondono.com/">Luis Hernando Londono</a>
+				</div>
 				<ul>
 					<li class="nav-link"><a href="https://luislondono.com/">Home</a></li>
 					<li class="nav-link"><a
-							href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit">Resume</a>
+							href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">Resume</a>
 					</li>
 					<li class="nav-link"><a href="myWork">My Work</a></li>
-					<li class="nav-link" id="dropdown-content">Gallery
-						<!-- <div class="nav-bar-collapsable-column">
-							<a href="#">Facebook</a>
-							<a href="#">Github</a>
-							<a href="#">LinkedIn</a>
-						</div> -->
+					<li class="nav-link" id="dropdown-content">Gallery</li>
+
+					<li class="social-media-link" id="github-link">
+						<a href="https://www.github.com/LuisLondono"></a>
+					</li>
+					<li class="social-media-link" id="facebook-link">
+						<a href="https://www.facebook.com/luislondonoramos"></a>
+					</li>
+					<li class="social-media-link" id="linkedin-link">
+						<a href="https://www.linkedin.com/in/luislondonoramos"></a>
 					</li>
 
-					<li class="social-media-link"><a href="https://www.github.com/LuisLondono"> <img
-								src="images/githubLogo.svg" alt=""></a></li>
-					<li class="social-media-link"><a href="https://www.facebook.com/luislondonoramos"><img
-								src="images/facebookLogo.svg" alt=""></a></li>
-					<li class="social-media-link"><a href="https://www.linkedin.com/in/luislondonoramos"><img
-								src="images/linkedinLogo.svg" alt=""></a></li>
 
 				</ul>
+
+			</nav>
+
+			<nav id="nav-bar-mobile">
+				<div id="nav-bar-mobile-horizontal-menu">
+					<div id="mobile-menu-icon-container">
+						<div class="hamburger-bun" id="bun-1-collapsed"></div>
+						<div class="hamburger-bun" id="bun-2-collapsed"></div>
+						<div class="hamburger-bun" id="bun-3-collapsed"></div>
+					</div>
+					<div id="navbar-logo">
+						<a href="https://luislondono.com/">Luis Hernando Londono</a>
+					</div>
+				</div>
+				<div class="mobile-menu-container" id="mobile-menu-container-collapsed">
+					<ul>
+						<li class="nav-link">
+							<a href="https://luislondono.com/">
+								<!-- <img src="./images/icons/home.svg" alt="home"> -->
+								Home
+							</a>
+						</li>
+						<li class="nav-link">
+							<a
+								href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">
+								Resume
+								<!-- <img src="./images/icons/resume.svg" alt="resume"> -->
+							</a>
+						</li>
+						<li class="nav-link">
+							<a href="myWork">
+								My Work
+								<!-- <img src="./images/icons/work.svg" alt="work"> -->
+							</a>
+						</li>
+						<li class="nav-link">
+							<a href="myWork">
+								Gallery
+								<!-- <img src="./images/icons/gallery.svg" alt="home"> -->
+							</a>
+						</li>
+
+					</ul>
+				</div>
+
 
 			</nav>
 
