--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
             <nav id="nav-bar-desktop">
-                <div id="navbar-logo">
+                <div class="navbar-logo">
                     <a href="https://luislondono.com/">Luis Hernando Londono</a>
                 </div>
                 <ul>
@@ -51,8 +51,11 @@
                         <div class="hamburger-bun" id="bun-2-collapsed"></div>
                         <div class="hamburger-bun" id="bun-3-collapsed"></div>
                     </div>
-                    <div id="navbar-logo">
+                    <div class="navbar-logo" id="logo-first-middle-last">
                         <a href="https://luislondono.com/">Luis Hernando Londono</a>
+                    </div>
+                    <div class="navbar-logo" id="logo-first-last">
+                        <a href="https://luislondono.com/">Luis Londono</a>
                     </div>
                 </div>
                 <div class="mobile-menu-container" id="mobile-menu-container-collapsed">
@@ -141,19 +144,19 @@
 
 
 
-    </div>
-    <div id="page-footer-navigator">
-        <ul>
-            <li class="social-media-link" id="github-link">
-                <a href="https://www.github.com/LuisLondono"></a>
-            </li>
-            <li class="social-media-link" id="facebook-link">
-                <a href="https://www.facebook.com/luislondonoramos"></a>
-            </li>
-            <li class="social-media-link" id="linkedin-link">
-                <a href="https://www.linkedin.com/in/luislondonoramos"></a>
-            </li>
-        </ul>
+        <div id="page-footer-navigator">
+            <ul>
+                <li class="social-media-link" id="github-link">
+                    <a href="https://www.github.com/LuisLondono"></a>
+                </li>
+                <li class="social-media-link" id="facebook-link">
+                    <a href="https://www.facebook.com/luislondonoramos"></a>
+                </li>
+                <li class="social-media-link" id="linkedin-link">
+                    <a href="https://www.linkedin.com/in/luislondonoramos"></a>
+                </li>
+            </ul>
+        </div>
     </div>
 
 </body>
