inject header by default by global.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="page">
 
     <header>
-        <div class="navbar-container">
+        <!-- <div class="navbar-container">
 
 
 
@@ -62,7 +62,6 @@
                     <ul>
                         <li class="nav-link">
                             <a href="https://luislondono.com/">
-                                <!-- <img src="./images/icons/home.svg" alt="home"> -->
                                 Home
                             </a>
                         </li>
@@ -70,19 +69,16 @@
                             <a
                                 href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">
                                 Resume
-                                <!-- <img src="./images/icons/resume.svg" alt="resume"> -->
                             </a>
                         </li>
                         <li class="nav-link">
                             <a href="myWork">
                                 My Work
-                                <!-- <img src="./images/icons/work.svg" alt="work"> -->
                             </a>
                         </li>
                         <li class="nav-link">
                             <a href="myWork">
                                 Gallery
-                                <!-- <img src="./images/icons/gallery.svg" alt="home"> -->
                             </a>
                         </li>
 
@@ -92,8 +88,7 @@
 
             </nav>
 
-        </div>
-
+        </div> -->
     </header>
 
     <div class="page-content">
