--- a/myWork.html
+++ b/myWork.html
@@ -5,94 +5,16 @@
 	<title>
 		Luis' Work
 	</title>
-	<link rel="stylesheet" type="text/css" href="css\styleMine.css">
+	<script type="text/javascript" src="./js/global.js"></script>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/mywork.css">
 	<link rel="shortcut icon" type="image/x-icon" href="images\cornellicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-
 </head>
 
 
 <body class="page">
 	<header>
-		<div class="navbar-container">
-
-
-
-			<nav id="nav-bar-desktop">
-				<div id="navbar-logo">
-					<a href="https://luislondono.com/">Luis Hernando Londono</a>
-				</div>
-				<ul>
-					<li class="nav-link"><a href="https://luislondono.com/">Home</a></li>
-					<li class="nav-link"><a
-							href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">Resume</a>
-					</li>
-					<li class="nav-link"><a href="myWork">My Work</a></li>
-					<li class="nav-link" id="dropdown-content">Gallery</li>
-
-					<li class="social-media-link" id="github-link">
-						<a href="https://www.github.com/LuisLondono"></a>
-					</li>
-					<li class="social-media-link" id="facebook-link">
-						<a href="https://www.facebook.com/luislondonoramos"></a>
-					</li>
-					<li class="social-media-link" id="linkedin-link">
-						<a href="https://www.linkedin.com/in/luislondonoramos"></a>
-					</li>
-
-
-				</ul>
-
-			</nav>
-
-			<nav id="nav-bar-mobile">
-				<div id="nav-bar-mobile-horizontal-menu">
-					<div id="mobile-menu-icon-container">
-						<div class="hamburger-bun" id="bun-1-collapsed"></div>
-						<div class="hamburger-bun" id="bun-2-collapsed"></div>
-						<div class="hamburger-bun" id="bun-3-collapsed"></div>
-					</div>
-					<div id="navbar-logo">
-						<a href="https://luislondono.com/">Luis Hernando Londono</a>
-					</div>
-				</div>
-				<div class="mobile-menu-container" id="mobile-menu-container-collapsed">
-					<ul>
-						<li class="nav-link">
-							<a href="https://luislondono.com/">
-								<!-- <img src="./images/icons/home.svg" alt="home"> -->
-								Home
-							</a>
-						</li>
-						<li class="nav-link">
-							<a
-								href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">
-								Resume
-								<!-- <img src="./images/icons/resume.svg" alt="resume"> -->
-							</a>
-						</li>
-						<li class="nav-link">
-							<a href="myWork">
-								My Work
-								<!-- <img src="./images/icons/work.svg" alt="work"> -->
-							</a>
-						</li>
-						<li class="nav-link">
-							<a href="myWork">
-								Gallery
-								<!-- <img src="./images/icons/gallery.svg" alt="home"> -->
-							</a>
-						</li>
-
-					</ul>
-				</div>
-
-
-			</nav>
-
-		</div>
-
 	</header>
 
 
